2023.02.14 ver4.4.1 - Bug fix for compling w/Ubuntu 22.04LTS.
                    - Change accessing to databases
	                 HST archive
	                 Kepler archive
	                 DSS via STSci
	                 DSS via ESO arhive
	            - Added TRDB acces delay.

2021.06.14 ver4.3.4 - Changed the limit size of all sky images to 1200 pix.
	            - Automatic rescale of X, Y, and d of all sky iamges over
	              the limit size.
                    - Adjusted all sky camera parameters.

2021.06.11 ver4.3.3 - A bug fix on memory release for broken all sky images.

2021.06.11 ver4.3.2 - Added Subaru's All Sky Image
	              (just for testing / Subaru inside only).
                     - A bug fix for all sky image flipping.
	             - Automatic broken image check for all sky images.

2021.04.27 ver4.3.1 - Fixed a bug in XMLRPC mode.

2021.04.06 ver4.3.0 - Added IRD and Seimei TriCCS for FC.
                    - Move AD, Tel Speed parameters to Obs position.

2021.03.23 ver4.2.0 - Revised Atmospherc Dispersion mappng, added KOOLS.
                    - Revised FC for KOOLS IFU.
	            - Read/Write for Seimei target list (.dat) file.

2021.01.25 ver4.1.0 - Added telescope azimuth mode (N=0 or S=0deg).
                    - Adjusted OAO sky camera parameters.
	            - Revised LAMOST FCDB search. Now supported DR5, DR6(low)
                      and DR6(Med).
                    - Added Subaru CHARIS, IRD, SWIMS, MIMIZUKU, OAO MuSCAT,
	              KOOLS-IFU, and Nishi-Harima NIC for SMOKA archive search.
                    - Updated SDSS data server to DR16.

2020.09.24 ver4.0.6 - Bug fix for TSC files auto loading.
                    - PMRA & PMDEC read for IRD OPE files.

2020.09.07 ver4.0.5 - Changed ASIVA's address to https.
                    - Revised https access for allsky cam images.

2020.08.18 ver4.0.4 - Added SWIMS into the FC instruments
	              PA is temporary (N-up = 0 and should be fixed